<resources>
    <string name="app_name">JobJob</string>
    <string name="socio">Socio</string>
    <string name="cliente">Cliente</string>
    <string name="inicio">Inicio</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre Completo</string>
    <string name="correo">Correo</string>
    <string name="telefono">telefono</string>
    <string name="password">Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="mapa">Mapa</string>
    <string name="servicios_solicitados">Servicios Solicitados</string>
    <string name="servicios_realisados">Servicios Realisados</string>
    <string name="settings">Configuración</string>
    <string name="salir">Salir</string>
    <string name="pagos">Metodos de Pago</string>
</resources>