<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mapa"
            android:title="@string/mapa"
            android:icon="@drawable/ic_map"/>
        <item
            android:id="@+id/nav_servicios"
            android:title="@string/servicios_realisados"
            android:icon="@drawable/ic_book"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_salir"
            android:title="@string/salir"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>