<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainFragment">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_gravity="top"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="25dp"/>

        <TextView
            style="@style/TextAppearance.AppTheme.Tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:padding="10dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/socio_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:text="@string/socio"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cliente_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:text="@string/cliente"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>