<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.opcion.OpcionInicioFragment"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:gravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="25dp"/>

        <TextView
            style="@style/TextAppearance.AppTheme.Tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:paddingTop="15dp"
        android:paddingStart="45dp"
        android:paddingEnd="45dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iniciar_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/iniciar"
            android:layout_marginBottom="15dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppTheme.OutlinedButton"
            android:id="@+id/registrar_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/registrarse"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>