<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:statusBarBackground="?colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" />

        <TextView
            style="@style/TextAppearance.AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_margin="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <com.google.android.material.button.MaterialButton
            style="@style/Theme.Button.AppTheme"
            android:id="@+id/btnSoySocio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/socio" />

        <com.google.android.material.button.MaterialButton
            style="@style/Theme.Button.AppTheme"
            android:id="@+id/btnSoyCliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/cliente"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>